# fixit

./: .gitignore  .nowignore  Cargo.toml  Dockerfile  Procfile  Rocket.toml  now.json
assets/knowledge_base/: knowledge_base.yaml  piano_fixtures.lms  piano_fixtures_demo.lms  plumbing_knowledge_base.lms
assets/static/: index.css  style.css
assets/templates/: answer.html.tera  ask.html.tera  base.html.tera  done.html.tera  index.html.tera  question.html.tera
docs/report/: main.tex  notes.org
src/: main.rs
