[package]
name = "fixit"
version = "0.1.0"
authors = ["Jordis <jordis1995@live.nl>"]
edition = "2018"
publish = false

[dependencies]
inference_engine = { git = "https://gitlab.com/jordis1002/inference_engine" }
rocket = "0.4.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["tera_templates"]
